# code-templates

./: LICENSE.txt  README.md  code-templates  code_templates  qcr_templates  use_template
.shared/: README.md
dummy/: .settings.yaml  CPP_NODE.cc  package.xml
python_package/: .files.yaml  .variables.yaml  README.md  setup.py
python_package/PACKAGE_NAME/: PACKAGE_NAME.py  __init__.py  __main__.py
python_package/PACKAGE_NAME__PASCAL/: PACKAGE_NAME__PASCAL.py  __init__.py  __main__.py
ros_package/: .file_reqs.yaml  .files.yaml  .settings.yaml  .variables.yaml  CMakeLists.txt  package.xml  setup.py
ros_package/action/: ADD_ACTIONS.action
ros_package/include/PACKAGE_NAME/: ADD_CPP_NODE.h
ros_package/msg/: ADD_MSGS.msg
ros_package/scripts/: ADD_PY_NODE
ros_package/src/: ADD_CPP_NODE.cpp  ADD_CPP_NODE_node.cpp
ros_package/src.ADD_CPP_NODE.ADD_PYTHON_NODE/PACKAGE_NAME.ADD_CPP_NODE.ADD_PY_NODE/: __init__.py.ADD_PY_NODE
ros_package/src/PACKAGE_NAME/: ADD_CPP_NODE.cpp  ADD_PY_NODE.py  __init__.py
ros_package/srv/: ADD_SERVICES.srv
ui_package/: .gitignore  .variables.yaml  README.md  next.config.js  package.json  tsconfig.json
ui_package/pages/: _app.tsx  index.tsx
ui_package/public/: noise.m4v
ui_package/src/: index.ts  tsconfig.json
ui_package/src/components/: Button.tsx  TopBar.tsx  example_component.tsx
ui_package/src/types/: example_type.ts
