<!-- Created with QCR's code template tool: https://github.com/qcr/code_templates -->

<?xml version="1.0"?>
<package format="2">
  <name>PACKAGE_NAME</name>
  <version>PACKAGE_VERSION</version>
  <description>The PACKAGE_NAME package</description>

  <maintainer email="AUTHOR_EMAIL">AUTHOR_NAME</maintainer>

  <license>LICENSE</license>

  TEMPLATE_START ADD_MSGS ADD_SERVICES ADD_ACTIONS
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  TEMPLATE_END
  TEMPLATE_START ADD_ACTIONS
  <build_depend>actionlib_msgs</build_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  TEMPLATE_END
  <buildtool_depend>catkin</buildtool_depend>

</package>
